<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/answer"
        android:background="@color/colorBackgroundAnswer"
        android:textColor="@color/colorTextAnswer"
        android:layout_margin="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="..."
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/eight"/>

                <Button
                    android:id="@+id/seven"
                    android:background="@drawable/button_style"
                    android:textColor="@color/colorTextNumber"
                    android:layout_height="0dp"
                    android:layout_width="0dp"
                    android:layout_margin="1dp"
                    android:text="7"
                    android:textSize="50sp"
                    app:layout_constraintTop_toBottomOf="@+id/answer"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/eight"
                    app:layout_constraintBottom_toTopOf="@+id/four"/>
                <Button
                    android:id="@+id/eight"
                    android:background="@drawable/button_style"
                    android:textColor="@color/colorTextNumber"
                    android:layout_marginRight="1dp"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="8"
                    android:textSize="50sp"
                    app:layout_constraintTop_toTopOf="@+id/seven"
                    app:layout_constraintLeft_toRightOf="@+id/seven"
                    app:layout_constraintRight_toLeftOf="@+id/nine"
                    app:layout_constraintBottom_toBottomOf="@+id/seven"/>
                <Button
                    android:id="@+id/nine"
                    android:background="@drawable/button_style"
                    android:textColor="@color/colorTextNumber"
                    android:layout_marginRight="1dp"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="9"
                    android:textSize="50sp"
                    app:layout_constraintTop_toTopOf="@+id/seven"
                    app:layout_constraintLeft_toRightOf="@+id/eight"
                    app:layout_constraintRight_toLeftOf="@+id/plus"
                    app:layout_constraintBottom_toBottomOf="@+id/seven"/>

                <Button
                    android:id="@+id/four"
                    android:background="@drawable/button_style"
                    android:textColor="@color/colorTextNumber"
                    android:layout_marginBottom="1dp"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="4"
                    android:textSize="50sp"
                    app:layout_constraintTop_toBottomOf="@+id/seven"
                    app:layout_constraintLeft_toLeftOf="@+id/seven"
                    app:layout_constraintRight_toRightOf="@+id/seven"
                    app:layout_constraintBottom_toTopOf="@+id/one"/>
                <Button
                    android:id="@+id/five"
                    android:background="@drawable/button_style"
                    android:textColor="@color/colorTextNumber"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="5"
                    android:textSize="50sp"
                    app:layout_constraintTop_toTopOf="@+id/four"
                    app:layout_constraintLeft_toLeftOf="@+id/eight"
                    app:layout_constraintRight_toRightOf="@+id/eight"
                    app:layout_constraintBottom_toBottomOf="@+id/four"/>
                <Button
                    android:id="@+id/six"
                    android:background="@drawable/button_style"
                    android:textColor="@color/colorTextNumber"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="6"
                    android:textSize="50sp"
                    app:layout_constraintTop_toTopOf="@+id/four"
                    app:layout_constraintLeft_toLeftOf="@+id/nine"
                    app:layout_constraintRight_toRightOf="@+id/nine"
                    app:layout_constraintBottom_toBottomOf="@+id/four"/>

                <Button
                    android:id="@+id/one"
                    android:background="@drawable/button_style"
                    android:textColor="@color/colorTextNumber"
                    android:layout_marginBottom="1dp"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="1"
                    android:textSize="50sp"
                    app:layout_constraintTop_toBottomOf="@+id/four"
                    app:layout_constraintLeft_toLeftOf="@+id/four"
                    app:layout_constraintRight_toRightOf="@+id/four"
                    app:layout_constraintBottom_toTopOf="@+id/zero"/>
                <Button
                    android:id="@+id/two"
                    android:background="@drawable/button_style"
                    android:textColor="@color/colorTextNumber"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="2"
                    android:textSize="50sp"
                    app:layout_constraintTop_toTopOf="@+id/one"
                    app:layout_constraintLeft_toLeftOf="@+id/eight"
                    app:layout_constraintRight_toRightOf="@+id/five"
                    app:layout_constraintBottom_toBottomOf="@+id/one"/>
                <Button
                    android:id="@+id/three"
                    android:background="@drawable/button_style"
                    android:textColor="@color/colorTextNumber"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="3"
                    android:textSize="50sp"
                    app:layout_constraintTop_toTopOf="@+id/one"
                    app:layout_constraintLeft_toLeftOf="@+id/six"
                    app:layout_constraintRight_toRightOf="@+id/nine"
                    app:layout_constraintBottom_toBottomOf="@+id/one"/>

                <Button
                    android:id="@+id/zero"
                    android:background="@drawable/button_style"
                    android:textColor="@color/colorTextNumber"
                    android:layout_marginBottom="1dp"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="0"
                    android:textSize="50sp"
                    app:layout_constraintTop_toBottomOf="@+id/one"
                    app:layout_constraintLeft_toLeftOf="@+id/one"
                    app:layout_constraintRight_toRightOf="@+id/one"
                    app:layout_constraintBottom_toTopOf="@+id/point"/>
                <Button
                    android:id="@+id/times"
                    android:background="@drawable/button_style_2"
                    android:textColor="@color/colorTextOperation"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="@string/multiplication"
                    android:textSize="50sp"
                    app:layout_constraintTop_toTopOf="@+id/zero"
                    app:layout_constraintLeft_toLeftOf="@+id/two"
                    app:layout_constraintRight_toRightOf="@+id/two"
                    app:layout_constraintBottom_toBottomOf="@+id/zero"/>
                <Button
                    android:id="@+id/divide"
                    android:background="@drawable/button_style_2"
                    android:textColor="@color/colorTextOperation"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="@string/division"
                    android:textSize="50sp"
                    app:layout_constraintTop_toTopOf="@+id/zero"
                    app:layout_constraintLeft_toLeftOf="@+id/nine"
                    app:layout_constraintRight_toRightOf="@+id/nine"
                    app:layout_constraintBottom_toBottomOf="@+id/zero"/>

                <Button
                    android:id="@+id/point"
                    android:background="@drawable/button_style"
                    android:textColor="@color/colorTextNumber"
                    android:layout_marginBottom="1dp"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="@string/decimalPoint"
                    android:textSize="50sp"
                    app:layout_constraintTop_toBottomOf="@+id/zero"
                    app:layout_constraintLeft_toLeftOf="@+id/zero"
                    app:layout_constraintRight_toRightOf="@+id/zero"
                    app:layout_constraintBottom_toTopOf="@+id/history"/>
                <Button
                    android:id="@+id/clear"
                    android:background="@drawable/button_style_2"
                    android:textColor="@color/colorTextOperation"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="@string/clearScreen"
                    android:textSize="50sp"
                    app:layout_constraintTop_toTopOf="@+id/point"
                    app:layout_constraintLeft_toLeftOf="@+id/two"
                    app:layout_constraintRight_toRightOf="@+id/two"
                    app:layout_constraintBottom_toBottomOf="@+id/point"/>
                <Button
                    android:id="@+id/back"
                    android:background="@drawable/button_style_2"
                    android:textColor="@color/colorTextOperation"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="@string/back_space"
                    android:textSize="50sp"
                    app:layout_constraintTop_toTopOf="@+id/point"
                    app:layout_constraintLeft_toLeftOf="@+id/nine"
                    app:layout_constraintRight_toRightOf="@+id/nine"
                    app:layout_constraintBottom_toBottomOf="@+id/point"/>

            <Button
                android:id="@+id/plus"
                android:background="@drawable/button_style_2"
                android:textColor="@color/colorTextOperation"
                android:layout_margin="1dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="+"
                android:textSize="50sp"
                app:layout_constraintTop_toBottomOf="@+id/answer"
                app:layout_constraintLeft_toRightOf="@+id/nine"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/minus" />
            <Button
                android:id="@+id/minus"
                android:background="@drawable/button_style_2"
                android:textColor="@color/colorTextOperation"
                android:layout_marginBottom="1dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="-"
                android:textSize="50sp"
                app:layout_constraintTop_toBottomOf="@+id/plus"
                app:layout_constraintLeft_toLeftOf="@+id/plus"
                app:layout_constraintRight_toRightOf="@+id/plus"
                app:layout_constraintBottom_toTopOf="@+id/equals"/>

            <Button
                android:id="@+id/equals"
                android:background="@drawable/button_style_2"
                android:textColor="@color/colorTextOperation"
                android:layout_marginBottom="1dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="="
                android:textSize="50sp"
                app:layout_constraintTop_toBottomOf="@+id/minus"
                app:layout_constraintLeft_toLeftOf="@+id/plus"
                app:layout_constraintRight_toRightOf="@+id/plus"
                app:layout_constraintBottom_toTopOf="@+id/draw"/>

            <Button
                android:id="@+id/draw"
                android:background="@drawable/button_style_3"
                android:textColor="@color/colorTextOperation"
                android:layout_marginBottom="1dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/freeDraw"
                android:textSize="50sp"
                app:layout_constraintTop_toBottomOf="@+id/equals"
                app:layout_constraintLeft_toLeftOf="@+id/plus"
                app:layout_constraintRight_toRightOf="@+id/plus"
                app:layout_constraintBottom_toTopOf="@+id/history"/>

    <view
        android:layout_width="0dp"
        android:layout_height="0dp"
        class="com.example.riley.mysimplecalculator.MainDrawingView"
        android:id="@+id/single_touch_view"
        android:background="@color/colorBackgroundNumber"
        app:layout_constraintTop_toTopOf="@id/eight"
        app:layout_constraintLeft_toLeftOf="@id/four"
        app:layout_constraintBottom_toBottomOf="@id/two"
        app:layout_constraintRight_toRightOf="@id/six"/>

    <TextView
        android:id="@+id/history"
        android:layout_margin="5dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorTextHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="..."
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/clear"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>